Fixing overflow for destination details

--- a/client/src/components/OverlayDisabledBodyScroll/OverlayDisabledBodyScroll.module.css
+++ b/client/src/components/OverlayDisabledBodyScroll/OverlayDisabledBodyScroll.module.css
@@ -7,7 +7,7 @@
     overflow: hidden;
     border-radius: 10px;
     z-index: 10;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .closeIcon {
